# game_c

./: .gitignore  CMakeLists.txt  Makefile
include/: camera.h  common.h  config.h  err_msg.h  game.h  gfx.h  graphics.h  input.h  list.h  mesh.h  result_code.h  shader.h  test_scene.h  texture.h
lib/cglm/: CMakeLists.txt
lib/cgltf/: cgltf.h
lib/glad/: gl.h
lib/glad/include/glad/: gl.h
src/: camera.c  config.c  err_msg.c  game.c  gfx.c  graphics.c  input.c  list.c  main.c  mesh.c  result_code.c  shader.c  texture.c
